# minia

./: .gitignore  .pre-commit-config.yaml  README.md  SOCKET_PROTOCOL.md  TODO.md  decode_chat.py  justfile  pyproject.toml
src/minia/: __init__.py  agent.py  compaction.py  llm_client.py  main.py  model.py  prompts.py  response_stream.py  serialization.py  server.py  token_estimation.py  utils.py  worker.py
src/minia_agent/: __init__.py  agent.py  compaction.py  response_stream.py  server.py
src/minia_chatloop/: __init__.py  client.py  main.py  speaker.py
src/minia_client/: __init__.py  cli.py  completion.py  markdown.py  scroll.py  ui.py
src/minia_client/commands/: __init__.py  builtin.py
src/minia_config/: __init__.py  settings.py  writer.py
src/minia_config/prompts/: __init__.py  defaults.py  elements.py  manager.py  system.py  workers.py
src/minia_llm/: __init__.py  llm_client.py  model.py  token_estimation.py
src/minia_mcp_client/: __init__.py  mcp_client.py  tool_schemas.py
src/minia_mcp_server/: __init__.py  main.py  mcp_instance.py  prompts.py  tool_command.py  tool_edit.py  tool_files.py  tool_geoloc.py  tool_pythonproj.py  tool_web.py  utils.py
src/minia_mother_forker/: __init__.py  __main__.py  mother_forker.py
src/minia_orch/: main.py
src/minia_protocol/: __init__.py  commands.py  events.py  tts.py
src/minia_sockets/: __init__.py  client.py  server.py
src/minia_stt/: __init__.py  audio_recorder.py  client.py  main.py  transcriber.py
src/minia_tools/: __init__.py  tool_schemas.py  utils.py  worker.py
src/minia_tts/: __init__.py  cancellation.py  cli.py  commands.py  preprocess.py  protocol.py  server.py  synthesis.py
src/minia_tts/kokoro/: __init__.py  constants.py  provider.py
src/minia_tts/output/: base.py  (+2 more)
src/minia_utils/: __init__.py  logging.py
src/minia_web/: __init__.py  server.py
systemd-units/: minia-chatloop.service  minia-server.service  minia-tts.service
tests/: test_agent.py  test_compaction.py  test_llm_client.py  test_model.py  test_preprocess.py  test_server.py  test_token_estimation.py  test_utils.py
tests/mcp_tools/: conftest.py  test_gitignore.py  test_mcp_server.py  test_tool_geoloc.py  test_tool_pythonproj.py  test_utils.py
(+1 files in other folders)
